--- a/_projects/Fireball/student-distrib/Makefile.dep
+++ b/_projects/Fireball/student-distrib/Makefile.dep
@@ -11,16 +11,18 @@ i8259.o: i8259.c i8259.h types.h lib.h
 int_handler.o: int_handler.c multiboot.h types.h x86_desc.h lib.h i8259.h \
   debug.h int_handler.h wrapper.h keyboard.h rtc.h systemcalls.h paging.h
 kernel.o: kernel.c multiboot.h types.h x86_desc.h lib.h i8259.h debug.h \
-  rtc.h wrapper.h systemcalls.h paging.h int_handler.h terminal.h \
+  pit.h rtc.h wrapper.h systemcalls.h paging.h int_handler.h terminal.h \
   keyboard.h buffer.h filesys.h bootscreen.h
 keyboard.o: keyboard.c keyboard.h lib.h types.h wrapper.h rtc.h \
   systemcalls.h paging.h i8259.h buffer.h terminal.h
 lib.o: lib.c lib.h types.h buffer.h keyboard.h wrapper.h rtc.h \
   systemcalls.h paging.h terminal.h
 paging.o: paging.c paging.h types.h lib.h
+pit.o: pit.c pit.h types.h wrapper.h lib.h i8259.h terminal.h keyboard.h \
+  rtc.h systemcalls.h paging.h buffer.h
 rtc.o: rtc.c rtc.h wrapper.h types.h systemcalls.h paging.h lib.h i8259.h \
   keyboard.h
 systemcalls.o: systemcalls.c systemcalls.h types.h paging.h wrapper.h \
-  filesys.h rtc.h terminal.h keyboard.h lib.h buffer.h x86_desc.h
+  filesys.h rtc.h terminal.h keyboard.h lib.h buffer.h x86_desc.h i8259.h
 terminal.o: terminal.c terminal.h types.h keyboard.h lib.h wrapper.h \
   rtc.h systemcalls.h paging.h buffer.h i8259.h
